--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-matplotlib==3.8.0
+matplotlib==3.4.0
 matplotlib-inline==0.1.6
 nltk==3.8.1
-numpy==1.26.1
+numpy==1.20.3
 opencv-python==4.8.1.78
 packaging==23.2
-pandas==2.1.2
+pandas==1.1.2
 PyAudio==0.2.14
 pydeck==0.8.1b0
 Pygments==2.16.1
 pyparsing==3.1.1
 pyttsx3==2.90
-pytz==2023.3.post1
+pytz==2021.3
 pyzmq==25.1.1
 requests==2.31.0
 scikit-learn==1.3.2
-scipy==1.11.3
+scipy==1.7.3
 seaborn==0.13.0
 SpeechRecognition==3.10.0
 streamlit==1.28.0
