--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ nltk==3.8.1
 numpy==1.20.3
 opencv-python==4.8.1.78
 packaging==23.2
-pandas==1.1.2
+plotly==5.18.0
 PyAudio==0.2.14
 pydeck==0.8.1b0
 Pygments==2.16.1
