--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,20 @@
-matplotlib==3.4.0
+importlib-metadata==6.8.0
+ipykernel==6.26.0
+ipython==8.17.2
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.3.2
+matplotlib==3.8.0
 matplotlib-inline==0.1.6
 nltk==3.8.1
-numpy==1.20.3
+numpy==1.26.1
 opencv-python==4.8.1.78
 pandas==2.1.2
-packaging==23.2
-plotly==5.18.0
 PyAudio==0.2.14
-pydeck==0.8.1b0
-Pygments==2.16.1
-pyparsing==3.1.1
 pyttsx3==2.90
-pytz==2021.3
-pyzmq==25.1.1
 requests==2.31.0
 scikit-learn==1.3.2
-scipy==1.7.3
 seaborn==0.13.0
 SpeechRecognition==3.10.0
 streamlit==1.28.0
 xgboost==2.0.2
-zipp==3.17.0
