--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-matplotlib==3.8.0
-matplotlib-inline==0.1.6
+
+matplotlib==3.8.2
 nltk==3.8.1
-numpy==1.26.1
+numpy==1.26.2
 opencv-python==4.8.1.78
-pandas==2.1.2
+pandas==2.1.3
+PyAudio==0.2.14
+pydeck==0.8.1b0
+Pygments==2.17.2
 pyttsx3==2.90
 scikit-learn==1.3.2
 SpeechRecognition==3.10.0
-streamlit==1.28.0
-PyAudio
+streamlit==1.28.2
 xgboost==2.0.2
