--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ nltk==3.8.1
 numpy==1.26.2
 opencv-python==4.8.1.78
 pandas==2.1.3
-PyAudio==0.2.11
+PyAudio @ file:///C:/Users/hp/pipwin/PyAudio-0.2.11-cp310-cp310-win_amd64.whl#sha256=50c5bd3401bc33b9f58a7c8005841575354a8b4d3293e68ccc4db59d31f18f9a
 pydeck==0.8.1b0
 Pygments==2.17.2
 pyttsx3==2.90
