--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,11 @@
-altair==5.1.2
-attrs==23.1.0
-beautifulsoup4==4.12.2
-blinker==1.7.0
-cachetools==5.3.2
-certifi==2023.11.17
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comtypes==1.2.0
-contourpy==1.2.0
-cycler==0.12.1
-docopt==0.6.2
-fonttools==4.45.0
-gitdb==4.0.11
-GitPython==3.1.40
-idna==3.4
-importlib-metadata==6.8.0
-Jinja2==3.1.2
-joblib==1.3.2
-Js2Py==0.74
-jsonschema==4.20.0
-jsonschema-specifications==2023.11.1
-kiwisolver==1.4.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-mdurl==0.1.2
-nltk==3.8.1
-numpy==1.26.2
-opencv-python==4.8.1.78
-packaging==23.2
-pandas==2.1.3
-Pillow==10.1.0
-pipwin==0.5.2
-protobuf==4.25.1
-pyarrow==14.0.1
-PyAudio @ file:///C:/Users/hp/pipwin/PyAudio-0.2.11-cp310-cp310-win_amd64.whl#sha256=50c5bd3401bc33b9f58a7c8005841575354a8b4d3293e68ccc4db59d31f18f9a
-pydeck==0.8.1b0
-Pygments==2.17.2
-pyjsparser==2.7.1
-pyparsing==3.1.1
-pypiwin32==223
-PyPrind==2.11.3
-pySmartDL==1.3.4
-python-dateutil==2.8.2
-pyttsx3==2.90
-pytz==2023.3.post1
-pywin32==306
-referencing==0.31.0
-regex==2023.10.3
-requests==2.31.0
-rich==13.7.0
-rpds-py==0.13.1
-scikit-learn==1.3.2
-scipy==1.11.4
-six==1.16.0
-smmap==5.0.1
-soupsieve==2.5
-SpeechRecognition==3.10.0
-streamlit==1.28.2
-tenacity==8.2.3
-threadpoolctl==3.2.0
-toml==0.10.2
-toolz==0.12.0
-tornado==6.3.3
-tqdm==4.66.1
-typing_extensions==4.8.0
-tzdata==2023.3
-tzlocal==5.2
-urllib3==2.1.0
-validators==0.22.0
-watchdog==3.0.0
-xgboost==2.0.2
-zipp==3.17.0
+matplotlib==3.5.3
+matplotlib-inline==0.1.6
+numpy==1.21.6
+pandas==1.1.5
+pickleshare==0.7.5
+scikit-learn==1.0.2
+scipy==1.7.3
+seaborn==0.12.2
+typing_extensions==4.7.1
+virtualenv==20.24.6
+PyAudio==0.2.13
