--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,72 @@
-
-matplotlib==3.8.2
+altair==4.2.2
+attrs==22.2.0
+backports.zoneinfo==0.2.1
+blinker==1.6.1
+cachetools==5.3.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+comtypes==1.1.14
+contourpy==1.0.7
+cycler==0.11.0
+decorator==5.1.1
+entrypoints==0.4
+fonttools==4.39.3
+gitdb==4.0.10
+GitPython==3.1.31
+idna==3.4
+importlib-metadata==6.3.0
+importlib-resources==5.12.0
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+kiwisolver==1.4.4
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+matplotlib==3.7.1
 mdurl==0.1.2
 nltk==3.8.1
-numpy==1.26.2
-opencv-python==4.8.1.78
-pandas==2.1.3
+numpy==1.24.2
+packaging==23.0
+pandas==1.5.3
+Pillow==9.5.0
+pkgutil_resolve_name==1.3.10
+plotly==5.14.1
+protobuf==3.20.3
+pyarrow==11.0.0
+PyAudio==0.2.13
+pydeck==0.8.0
+Pygments==2.15.0
+Pympler==1.0.1
+pyparsing==3.0.9
+pypiwin32==223
+pyrsistent==0.19.3
+python-dateutil==2.8.2
 pyttsx3==2.90
-pytz==2023.3.post1
-requests==2.31.0
-rich==13.7.0
-rpds-py==0.13.1
-scikit-learn==1.3.2
-scipy==1.11.4
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+pywin32==306
+regex==2023.3.23
+requests==2.28.2
+rich==13.3.3
+scikit-learn==1.2.2
+scipy==1.10.1
+seaborn==0.12.2
 six==1.16.0
-smmap==5.0.1
-sounddevice==0.4.6
-soupsieve==2.5
+smmap==5.0.0
 SpeechRecognition==3.10.0
-streamlit==1.28.2
-tenacity==8.2.3
-threadpoolctl==3.2.0
+streamlit==1.21.0
+tenacity==8.2.2
+threadpoolctl==3.1.0
 toml==0.10.2
 toolz==0.12.0
-tornado==6.3.3
-tqdm==4.66.1
-typing_extensions==4.8.0
+tornado==6.2
+tqdm==4.65.0
+typing_extensions==4.5.0
 tzdata==2023.3
-tzlocal==5.2
-urllib3==2.1.0
-validators==0.22.0
+tzlocal==4.3
+urllib3==1.26.15
+validators==0.20.0
 watchdog==3.0.0
-xgboost==2.0.2
-zipp==3.17.0
+zipp==3.15.0
